--- a/app/views/questions/_questions_form.html.erb
+++ b/app/views/questions/_questions_form.html.erb
@@ -1,12 +1,15 @@
-<%= form_for(@question , html: {multipart: true}) do |f| %>
-  <div class="field">
-    <%= f.text_field :header, placeholder: "What is your question?" %>
-  </div>
-  <div class="field">
-    <%= f.text_area :content, placeholder: "Explain your question here!!" %>
-  </div>
-  <div class="field">
-    <%= text_field :tags, :tags %>
-  </div>
-  <%= f.submit "Ask ", class: "btn btn-primary" %>
-<% end %>
+<div class="col col-xl-20 ques">
+  <%= form_for(@question , html: {multipart: true}) do |f| %>
+    <div class="field">
+      <%= f.text_field :header, placeholder: "What is your question?" %>
+    </div>
+    <div class="field">
+      <%= f.text_area :content, placeholder: "Explain your question here!!" %>
+    </div>
+    <div class="field">
+      <%= text_field :tags, :tags, placeholder: "Question Tags go here!!!" %>
+    </div>
+    <%= f.submit "Ask ", class: "btn btn-primary" %>
+  <% end %>
+</div>
+
