--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,17 @@
 <% provide(:title, "Home") %>
 <% if logged_in? %>
+  <h1>Your Queries</h1>
   <div class="row">
-
   <div class="col-md-8">
     <%= render @questions %>
   </div>
 
   <% else%>
-    <p>
-      <%=render "questions/search" %>
-      <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
-    </p>
+  <div class="jumbotron text-center">
+    <h1>Welcome to My Stack_Overflow</h1>
+    <div class="col-md-4 col-md-offset-4"><%= link_to "Sign up now!", new_user_path, class: "btn btn-lg btn-primary" %></div>
+  </div>
+  <div class="btn btn-primary"><%= link_to "Search" ,search_path%> </div>
   </div>
 <% end %>
 
