--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_for(Answer.new) do |f| %>
-  <div class="field">
-    <%= f.text_area :content, placeholder: "Answer Here" %>
+<%= form_for(Comment.new) do |f| %>
+  <div class="comment">
+    <%= f.text_area :content, placeholder: "Comment Here" %>
   </div>
-  <%=f.hidden_field :question_id, value: @question.id %>
-  <%=f.hidden_field :user_id, value: @current_user.id %>
-  <%= f.submit "Answer ", class: "btn btn-primary" %>
+  <%=f.hidden_field :commentable_id, value: obj_id %>
+  <%=f.hidden_field :commentable_type, value: obj_type %>
+  <%= f.submit "Comment ", class: "btn btn-primary" %>
 <% end %>
