--- a/app/views/questions/search.html.erb
+++ b/app/views/questions/search.html.erb
@@ -1,10 +1,21 @@
-<% provide(:title, 'Search') %>
-<h1>Your Search for <%=params[:search] %></h1>
-<%= will_paginate %>
-  <ul class="questions">
-      <% @questions.each do |question| %>
-      <li><h4><%= link_to question.header, question %></h4>
-        <h5><%= question.content.truncate(100)%></h5></li>
-      <% end %>
-  </ul>
+
+<% provide(:title, "Search") %>
+<h1>Search</h1>
+<p>
+  <%= form_with(url: search_path , method: "get") do %>
+    <%= label_tag(:search, "Search for:")  %>
+    <%= text_field_tag(:search)%>
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+  <% end %>
+
+</p>
+
+
+<ul class="questions">
+  <% @questions.each do |question| %>
+    <li><h4><%= link_to question.header, question %></h4>
+      <h5><%= question.content.truncate(100)%></h5></li>
+  <% end %>
+</ul>
+
 <%= will_paginate %>
