--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,8 +6,7 @@
       <%= render 'shared/error_messages', object: f.object %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.hidden_field :email,email: @user.email %>
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
       <%= f.label :password_confirmation, "Confirmation" %>
