--- a/app/views/questions/_questions_form.html.erb
+++ b/app/views/questions/_questions_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.text_area :content, placeholder: "Explain your question here!!" %>
   </div>
   <div class="field">
-    <%= text_field :tags, :tags %>
+    <%= text_field_tag :tags, nil, placeholder: "Enter tags here" %>
   </div>
-  <%= f.submit "Ask ", class: "btn btn-primary" %>
+  <%= f.button "Ask ", class: "btn btn-primary" %>
 <% end %>
