--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,38 +8,15 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 <body>
-
-
-
-
-
-
 <%= render 'layouts/header' %>
-
-<% if logged_in? %>
-  <%= render "layouts/sidebar"%>
-  <div class="main">
+  <%= render "layouts/sidebar" if logged_in?%>
     <div class="container">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
       <%= yield %>
     </div>
-  </div>
-<% else %>
-  <div class="container">
-    <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
-    <% end %>
-    <%= yield %>
-  </div>
-
-<%end %>
-
 <%= render 'layouts/footer' %>
 <%= debug(params) if Rails.env.development? %>
 </body>
-
-
-
 </html>
