--- a/app/views/questions/_search.html.erb
+++ b/app/views/questions/_search.html.erb
@@ -1,5 +1,4 @@
 <%= form_with(url: search_path , method: "get") do %>
-  <%= label_tag(:search, "Search for:")  %>
-  <%= text_field_tag(:search)%>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
+  <%= text_field_tag :search, nil, placeholder: 'Enter your search query', class: 'form-control'%>
+  <%= button_tag "Search", class: "btn btn-primary pull-right" %>
 <% end %>
