Improve layout of the stackoverflow

--- a/app/views/questions/search.html.erb
+++ b/app/views/questions/search.html.erb
@@ -1,13 +1,13 @@
-
 <% provide(:title, "Search") %>
+
 <h1>Search</h1>
+
 <p>
-  <%= form_with(url: search_path , method: "get") do %>
+  <%= form_for search_path , method: "get" do %>
     <%= label_tag(:search, "Search for:")  %>
     <%= text_field_tag(:search)%>
     <%= submit_tag "Search", class: "btn btn-primary" %>
   <% end %>
-
 </p>
 
 
