--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,8 @@
-@import "bootstrap-sprockets";
+//@import "bootstrap-sprockets";
 @import "bootstrap";
 
 /* mixins, variables, etc. */
 
-$gray-medium-light: #eaeaea;
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -54,7 +53,7 @@ h2 {
   margin-bottom: 30px;
   text-align: left;
   font-weight: normal;
-  color: $gray-light;
+  color: lightgray;
 }
 
 p {
@@ -62,7 +61,7 @@ p {
   line-height: 1.7em;
 }
 
-.badge.badge-secondary{
+.badge .badge-secondary{
   color: lightgrey;
   a{
   color: #434581;
@@ -123,6 +122,7 @@ p {
 .gravatar_edit {
   margin-top: 15px;
 }
+
 .stats {
   overflow: auto;
   margin-top: 0;
@@ -130,7 +130,7 @@ p {
   a {
     float: left;
     padding: 0 10px;
-    border-left: 1px solid $gray-lighter;
+    border-left: 1px solid lightgray;
     color: gray;
     &:first-child {
       padding-left: 0;
@@ -145,6 +145,7 @@ p {
     display: block;
   }
 }
+
 .user_avatars {
   overflow: auto;
   margin-top: 10px;
@@ -155,21 +156,24 @@ p {
     padding: 0;
   }
 }
+
 .users.follow {
   padding: 0;
 }
 
 /* footer */
 footer {
+  position: sticky;
+  bottom: 0;
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid $gray-medium-light;
+  border-top: 1px solid lightgray;
   color: #2E2F30;
 
   a {
-    color: $gray;
+    color: gray;
     &:hover {
-      color: $gray-darker;
+      color: gray;
     }
   }
   small {
@@ -239,7 +243,7 @@ width: 150%;
 .field_with_errors {
   @extend .has-error;
   .form-control {
-    color: $state-danger-text;
+    color: red;
   }
 }
 
@@ -264,7 +268,7 @@ width: 150%;
   li {
     overflow: auto;
     padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
+    border-bottom: 1px solid lightgray;
   }
 }
 .questions {
@@ -273,7 +277,7 @@ width: 150%;
   li {
     overflow: auto;
     padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
+    border-bottom: 1px solid lightgray;
   }
 }
 /* microposts */
@@ -297,7 +301,7 @@ width: 150%;
     }
   }
   .timestamp {
-    color: $gray-light;
+    color: lightgray;
     display: block;
     margin-left: 60px;
   }
@@ -384,7 +388,7 @@ span.picture {
 }
 
 .question_box{
-  border:  10px solid $gray-lighter;
+  border:  10px solid lightgray;
   padding: 10px;
   h1{
     left: 10px;
