--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,32 +5,20 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', media: 'all' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 <body>
-<%= render 'layouts/header' %>
-<% if logged_in? %>
-  <%= render "layouts/sidebar"%>
-  <div class="main">
-    <div class="container">
+  <%= render 'layouts/header' %>
+  <div class="flex-box">
+    <%= render "layouts/sidebar" if logged_in? %>
+    <div class="container main-display-container">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
       <%= yield %>
     </div>
   </div>
-<% else %>
-
-  <div class="container">
-    <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
-    <% end %>
-    <%= yield %>
-  </div>
-
-<%end %>
-
-<%= render 'layouts/footer' %>
-<%= debug(params) if Rails.env.development? %>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
