--- a/app/assets/stylesheets/comment.scss
+++ b/app/assets/stylesheets/comment.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the comment controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comment{
+  textarea{
+    width: 70%;
+    height: 70px;
+  }
+  .btn-primary{
+    width: 70%;
+  }
+}
