--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,7 +14,7 @@
 /* universal */
 
 body {
-  padding-top: 60px;
+  padding-top: 50px;
 }
 
 section {
@@ -61,13 +61,6 @@ p {
   line-height: 1.7em;
 }
 
-.badge .badge-secondary{
-  color: lightgrey;
-  a{
-  color: #434581;
-}}
-
-
 /* header */
 
 #logo {
@@ -82,110 +75,6 @@ p {
   &:hover {
     color: lightblue;
     text-decoration: none;
-  }
-}
-
-/*  sidebar */
-
-
-.split {
-  height: 100%;
-  width: 10%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-/* Control the left side */
-.left {
-  left: 0;
-}
-
-/* Control the right side */
-.right {
-  right: 0;
-}
-
-.centered {
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.gravatar {
-  float: left;
-  margin-right: 10px;
-}
-.gravatar_edit {
-  margin-top: 15px;
-}
-
-.stats {
-  overflow: auto;
-  margin-top: 0;
-  padding: 0;
-  a {
-    float: left;
-    padding: 0 10px;
-    border-left: 1px solid lightgray;
-    color: gray;
-    &:first-child {
-      padding-left: 0;
-      border: 0;
-    }
-    &:hover {
-      text-decoration: none;
-      color: blue;
-    }
-  }
-  strong {
-    display: block;
-  }
-}
-
-.user_avatars {
-  overflow: auto;
-  margin-top: 10px;
-  .gravatar {
-    margin: 1px 1px;
-  }
-  a {
-    padding: 0;
-  }
-}
-
-.users.follow {
-  padding: 0;
-}
-
-/* footer */
-footer {
-  position: sticky;
-  bottom: 0;
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid lightgray;
-  color: #2E2F30;
-
-  a {
-    color: gray;
-    &:hover {
-      color: gray;
-    }
-  }
-  small {
-    float: left;
-  }
-  ul {
-    float: right;
-    list-style: none;
-    li {
-      float: left;
-      margin-left: 15px;
-    }
   }
 }
 
@@ -210,8 +99,6 @@ input, select, .uneditable-input {
   @include box_sizing;
 }
 
-
-
 input {
   height: auto !important;
 }
@@ -227,10 +114,16 @@ textarea{
 .col.col-xl-20.ques {
 margin-left: 12.5%;
 width: 150%;
-
 }
 
-
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
 
 #error_explanation {
   color: red;
@@ -247,179 +140,29 @@ width: 150%;
   }
 }
 
-.checkbox {
-  margin-top: -10px;
-  margin-bottom: 10px;
-  span {
-    margin-left: 20px;
-    font-weight: normal;
-  }
-}
-
 #session_remember_me {
   width: auto;
   margin-left: 0;
 }
-
-/* Users index */
-.users {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 10px 0;
-    border-bottom: 1px solid lightgray;
-  }
-}
-.questions {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 10px 0;
-    border-bottom: 1px solid lightgray;
-  }
-}
-/* microposts */
-.microposts {
-  list-style: none;
-  padding: 0;
-  li {
-    padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
-  }
-  .user {
-    margin-top: 5em;
-    padding-top: 0;
-  }
-  .content {
-    display: block;
-    margin-left: 60px;
-    img {
-      display: block;
-      padding: 5px 0;
-    }
-  }
-  .timestamp {
-    color: lightgray;
-    display: block;
-    margin-left: 60px;
-  }
-  .gravatar {
-    float: left;
-    margin-right: 10px;
-    margin-top: 5px;
-  }
-}
-aside {
-  textarea {
-    height: 100px;
-    margin-bottom: 5px;
-  }
-}
-span.picture {
-  margin-top: 10px;
-  input {
-    border: 0;
-  }
-}
-
-.sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 5%; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-}
-
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 100%;
-  color: #818181;
-  display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
 
 /* Style page content */
 .main {
   margin-left: 160px; /* Same as the width of the sidebar */
   padding: 0px 10px;
 }
-/* User card */
-.album {
-  min-height: 50rem; /* Can be removed; just added for demo purposes */
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  margin-left: 6.5%;
 
+.flex-box {
+  display: flex;
 }
 
-.card {
-  float: left;
-  width: 25%;
-  padding: .75rem ;
-  margin-bottom: 3rem;
-  margin-left: 3rem;
-  border: 0;
-  background-color: #ccd3d2;
-  strong{
-    color: aqua;
-  }
-  .btn.btn-primary{
-    border: 0px ;
-    background-color: blue;
-    width: 100%;
-  }
+.main-display-container {
+  margin-left: 160px;
+  margin-right: 200px;
+  min-height: 700px;
+  z-index: 3;
+  padding: 10px 30px 30px 60px;
 }
 
-
-.card-text {
-  font-size: 120%;
+.container {
+  margin-left: 160px;
 }
-
-.question_box{
-  border:  10px solid lightgray;
-  padding: 10px;
-  h1{
-    left: 10px;
-    text-align: left;
-  }
-  h2{
-    text-justify: auto;
-  }
-
-}
-
-.answer{
-  textarea{
-    width: 60%;
-    height: 300px;
-  }
-}
-
-.comment{
-  textarea{
-    width: 70%;
-    height: 70px;
-  }
-  .btn-primary{
-    width: 70%;
-  }
-}
-
-
-
-
-
-
-
